@@ -5,6 +5,7 @@ import com.libraryManagement.libraryManagement.Entities.Users;
 import com.libraryManagement.libraryManagement.repository.LibrarianRepository;
 import com.libraryManagement.libraryManagement.repository.UsersRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -13,6 +14,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsServiceImpl implements UserDetailsService {
@@ -35,13 +37,18 @@ public class CustomUserDetailsServiceImpl implements UserDetailsService {
 
 
         if(user != null){
-            return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(), Collections.emptyList());
+            return new org.springframework.security.core.userdetails.User(user.getUsername(),
+                    user.getPassword(),
+                    List.of(new SimpleGrantedAuthority("ROLE_USER")));
 
         }
         if(librarian != null){
-            return new org.springframework.security.core.userdetails.User(librarian.getUsername(), librarian.getPassword(), Collections.emptyList());
+            return new org.springframework.security.core.userdetails.User(librarian.getUsername(),
+                    librarian.getPassword(),
+                    List.of(new SimpleGrantedAuthority("ROLE_LIBRARIAN")));
 
         }
+
 
         throw new UsernameNotFoundException("User Not Found For UserName : "+username);
     }
